# shikimori-manager

./: .env.example  .gitignore  README.md  README.ru.md  config.example.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
shikimori_manager/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  core.py  rules.py  tasks.py  web.py
tests/: test_rules.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  api.js  i18n.js  style.css
web/src/components/: Dashboard.vue  RuleMover.vue  Settings.vue
