[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shikimori-manager"
version = "0.1.0"
description = "Move anime between your Shikimori lists using declarative rules."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["shikimori", "anime", "cli", "api"]
authors = [{ name = "Your Name" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/shikimori-manager"
Issues = "https://github.com/your-username/shikimori-manager/issues"

[project.scripts]
shikimori-manager = "shikimori_manager.cli:main"

[tool.setuptools]
packages = ["shikimori_manager"]
